Upvote button fix, UI overflow fix for presentation

--- a/src/styles/ui/BaseContainer.scss
+++ b/src/styles/ui/BaseContainer.scss
@@ -3,7 +3,7 @@
 .base-container {
   margin-left: auto;
   margin-right: auto;
-  padding-top: $DESKTOP_HEIGHT / 10;
+  padding-top: $DESKTOP_HEIGHT / 20;
   max-width: $DESKTOP_WIDTH;
   max-height: $DESKTOP_HEIGHT;
   color: $textColor;
